--- a/app/views/competitions/certificates/templates/_index_right.html.haml
+++ b/app/views/competitions/certificates/templates/_index_right.html.haml
@@ -1,4 +1,3 @@
-= card('Erläuterung') do |card|
-  - card.body do
-    %p Hier kannst du Vorlagen für Urkunden anlegen, die später mit den Ergebnislisten automatisch ausgefüllt werden.
-    .alert.alert-info Bitte beachte, dass diese Funktionen nur mit Firefox und Chrome ausführlich getestet wurden.
+= card_body('Erläuterung') do
+  %p Hier kannst du Vorlagen für Urkunden anlegen, die später mit den Ergebnislisten automatisch ausgefüllt werden.
+  .alert.alert-info Bitte beachte, dass diese Funktionen nur mit Firefox und Chrome ausführlich getestet wurden.
