--- a/app/views/competitions/disciplines/_form.html.haml
+++ b/app/views/competitions/disciplines/_form.html.haml
@@ -1,9 +1,9 @@
-- card.body do
+- c.body do
   = f.input :key, as: :radio_buttons, collection: Discipline::DISCIPLINES, label_method: ->(l) { discipline_image(l, size: 40) }
   = f.input :name
   = f.input :short_name
   = f.input :single_discipline
   = f.input :like_fire_relay
-- card.footer do
+- c.footer do
   = f.primary_button :submit
   = f.cancel_button(competition_disciplines_path)
