--- a/app/views/competitions/documents/_new_right.html.haml
+++ b/app/views/competitions/documents/_new_right.html.haml
@@ -1,4 +1,3 @@
-= card do |card|
-  - card.body do
-    %p Hier kannst du zusätzliche Dokumente zu deinem Wettkampf hochladen. Wettkämpfer und Zuschauer interessieren sich bestimmt für die <b>Ausschreibung</b> und den <b>Ablaufplan</b>. Auch ein Flyer sieht immer gut aus.
-    %p Du kannst PDFs und Bilder hochladen. Die Datei darf nicht größer als 20 MB sein.
+= card_body do
+  %p Hier kannst du zusätzliche Dokumente zu deinem Wettkampf hochladen. Wettkämpfer und Zuschauer interessieren sich bestimmt für die <b>Ausschreibung</b> und den <b>Ablaufplan</b>. Auch ein Flyer sieht immer gut aus.
+  %p Du kannst PDFs und Bilder hochladen. Die Datei darf nicht größer als 20 MB sein.
