--- a/app/views/competitions/people/_assessment_request_card.html.haml
+++ b/app/views/competitions/people/_assessment_request_card.html.haml
@@ -1,5 +1,5 @@
-= card("Gewünschte #{Assessment.model_name.human count: :many}") do |card|
-  - card.direct do
+= card("Gewünschte #{Assessment.model_name.human count: :many}") do |c|
+  - c.direct do
     %table.table
       - @competition.assessments.requestable_for_person(@person.band).each do |assessment|
         %tr
@@ -10,5 +10,5 @@
             - if @person.request_for(assessment).present?
               = t("assessment_types.#{@person.request_for(assessment).assessment_type}")
   - if editable && can?(:edit, @person)
-    - card.footer do
+    - c.footer do
       = btn_link_to 'Wertungen bearbeiten', { action: :edit_assessment_requests }
