--- a/app/views/competitions/people/index.html.haml
+++ b/app/views/competitions/people/index.html.haml
@@ -1,17 +1,17 @@
 = render 'competitions/header', competition: @competition, sub: resource_class.model_name.human(count: :many)
 
 - @competition.bands.sort.each do |band|
-  = card(band.name, class: 'mb-3') do |card|
-    - card.body do
+  = card(band.name, class: 'mb-3') do |c|
+    - c.body do
       - if resource_collection.exists?(band:)
         = render('index_table', resource_class:, resource_collection: resource_collection.where(band:).sort, band:)
       - else
         .alert.alert-info= t('a.no_entries_found')
 
     - if can?(:create, resource_class.new(competition: @competition, band:))
-      - card.primary_actions do |actions|
+      - c.primary_actions do |actions|
         - actions.link_to t('a.add'), { action: :new, band_id: band.id }, end_icon: :square_plus
 
-      - card.actions do |actions|
+      - c.actions do |actions|
         - actions.link_to 'PDF', { format: :pdf }, end_icon: :file_pdf, target: '_blank', rel: 'noopener'
         - actions.link_to 'XLS', { format: :xlsx }, end_icon: :file_excel
