--- a/app/views/competitions/registrations/edit.html.haml
+++ b/app/views/competitions/registrations/edit.html.haml
@@ -3,7 +3,7 @@
 .row
   .col-md-8
     = simple_form_for(@competition, url: competition_registration_path) do |f|
-      = card 'Wettkampf aktualisieren' do |c|
+      = card('Wettkampf aktualisieren') do |c|
         - c.body do
           = f.input :registration_open, as: :radio_buttons, collection: Competition::REGISTRATION_OPEN.map { |k, _v| [t("competitions.registration_open.#{k}"), k] }
           = f.input :registration_open_until, html5: true
