--- a/app/views/competitions/score/competition_results/_edit_right.html.haml
+++ b/app/views/competitions/score/competition_results/_edit_right.html.haml
@@ -1,6 +1,6 @@
-= card(t('a.actions'), class: 'mb-3') do |card|
-  - card.primary_actions do |actions|
+= card(t('a.actions'), class: 'mb-3') do |c|
+  - c.primary_actions do |actions|
     - actions.link_to 'Übersicht', { action: :index }, end_icon: :list
-  - card.body do
+  - c.body do
     .d-grid.gap-2
       = btn_link_to 'Löschen', { action: :destroy }, data: { turbo_method: 'delete', turbo_confirm: 'Gesamtwertung wirklich löschen?' }
