--- a/app/views/errors/not_found.html.haml
+++ b/app/views/errors/not_found.html.haml
@@ -6,13 +6,13 @@
 
 .row
   .col-md-6
-    = card_body 'Mögliche Ursachen' do
+    = card_body('Mögliche Ursachen') do
       %ul
         %li Programmfehler
         %li Manuelle (falsche) Eingabe einer URL
         %li URL ist nicht <em>mehr</em> vorhanden (z. B. Element wurde gelöscht)
   .col-md-6
-    = card_body 'Mögliche Lösungen' do
+    = card_body('Mögliche Lösungen') do
       %ul
         %li Erneut probieren
         %li <em>Aktualisieren</em> der Browser-Seite
