--- a/app/views/errors/unprocessable_entity.html.haml
+++ b/app/views/errors/unprocessable_entity.html.haml
@@ -6,12 +6,12 @@
 
 .row
   .col-md-6
-    = card_body 'Mögliche Ursachen' do
+    = card_body('Mögliche Ursachen') do
       %ul
         %li Absichtliche oder unabsichtliche Eingabe falscher Daten
         %li Programmfehler
   .col-md-6
-    = card_body 'Mögliche Lösungen' do
+    = card_body('Mögliche Lösungen') do
       %ul
         %li Erneut probieren
         %li Probieren Sie andere Werte oder Daten aus
