--- a/app/views/competition_nested/edit.html.haml
+++ b/app/views/competition_nested/edit.html.haml
@@ -3,7 +3,7 @@
 .row
   .col-md-8
     = simple_form_for(resource_instance, url: url_for(controller: controller_path, action: :update)) do |f|
-      = card "#{resource_class.model_name.human} aktualisieren" do |card|
-        = render('form', f:, card:)
+      = card("#{resource_class.model_name.human} aktualisieren") do |c|
+        = render('form', f:, c:)
   .col-md-4
     = render('edit_right')
