--- a/app/views/competitions/assessments/show.html.haml
+++ b/app/views/competitions/assessments/show.html.haml
@@ -2,24 +2,23 @@
 
 .row
   .col-md-8
-    = card(@assessment.name, class: 'mb-3') do |card|
-      - card.direct do
-        %table.table
-          %tr
-            %th= Assessment.human_attribute_name(:name)
-            %td= @assessment.name
-          %tr
-            %th= Assessment.human_attribute_name(:discipline)
-            %td= @assessment.discipline.name
-          %tr
-            %th= Assessment.human_attribute_name(:band)
-            %td= link_to(@assessment.band.name, competition_band_path(id: @assessment.band.id))
+    = card_direct(@assessment.name, class: 'mb-3') do
+      %table.table
+        %tr
+          %th= Assessment.human_attribute_name(:name)
+          %td= @assessment.name
+        %tr
+          %th= Assessment.human_attribute_name(:discipline)
+          %td= @assessment.discipline.name
+        %tr
+          %th= Assessment.human_attribute_name(:band)
+          %td= link_to(@assessment.band.name, competition_band_path(id: @assessment.band.id))
 
   .col-md-4
-    = card(t('a.actions')) do |card|
-      - card.primary_actions do |actions|
+    = card(t('a.actions')) do |c|
+      - c.primary_actions do |actions|
         - actions.link_to 'Übersicht', { action: :index }, end_icon: :list
-      - card.body do
+      - c.body do
         .d-grid.gap-2
           = btn_link_to 'Bearbeiten', { action: :edit }
           - if @assessment.destroy_possible?
