--- a/app/views/competitions/bands/show.html.haml
+++ b/app/views/competitions/bands/show.html.haml
@@ -2,37 +2,36 @@
 
 .row
   .col-md-8
-    = card(@band.name, class: 'mb-3') do |card|
-      - card.direct do
-        %table.table
-          %tr
-            %th= Band.human_attribute_name(:gender)
-            %td= t("gender.#{@band.gender}")
-          %tr
-            %th= Band.human_attribute_name(:name)
-            %td= @band.name
-          %tr
-            %th= Band.human_attribute_name(:person_tag_names)
-            %td
-              - if @band.person_tags.present?
-                %ul
-                  - @band.person_tags.each do |tag|
-                    %li= tag
-              - else
-                &dash;
-          %tr
-            %th= Band.human_attribute_name(:team_tag_names)
-            %td
-              - if @band.team_tags.present?
-                %ul
-                  - @band.team_tags.each do |tag|
-                    %li= tag
-              - else
-                &dash;
+    = card_direct(@band.name, class: 'mb-3') do
+      %table.table
+        %tr
+          %th= Band.human_attribute_name(:gender)
+          %td= t("gender.#{@band.gender}")
+        %tr
+          %th= Band.human_attribute_name(:name)
+          %td= @band.name
+        %tr
+          %th= Band.human_attribute_name(:person_tag_names)
+          %td
+            - if @band.person_tags.present?
+              %ul
+                - @band.person_tags.each do |tag|
+                  %li= tag
+            - else
+              &dash;
+        %tr
+          %th= Band.human_attribute_name(:team_tag_names)
+          %td
+            - if @band.team_tags.present?
+              %ul
+                - @band.team_tags.each do |tag|
+                  %li= tag
+            - else
+              &dash;
 
-    = card(Assessment.model_name.human(count: :many)) do |card|
+    = card(Assessment.model_name.human(count: :many)) do |c|
       - if @band.assessments.exists?
-        - card.direct do
+        - c.direct do
           %table.table
             %tr
               %th= Assessment.human_attribute_name(:name)
@@ -44,14 +43,14 @@
                   = discipline_image assessment.discipline.key
                   = assessment.name
       - else
-        - card.body do
+        - c.body do
           .alert.alert-info= t('a.no_entries_found')
 
   .col-md-4
-    = card(t('a.actions')) do |card|
-      = card.primary_actions do |actions|
-        = actions.link_to 'Übersicht', { action: :index }, end_icon: :list
-      - card.body do
+    = card(t('a.actions')) do |c|
+      - c.primary_actions do |actions|
+        - actions.link_to 'Übersicht', { action: :index }, end_icon: :list
+      - c.body do
         .d-grid.gap-2
           = btn_link_to 'Bearbeiten', { action: :edit }
           - if @band.destroy_possible?
