--- a/app/views/competitions/certificates/templates/_form.html.haml
+++ b/app/views/competitions/certificates/templates/_form.html.haml
@@ -1,9 +1,9 @@
-- card.body do
+- c.body do
   = f.input :name, hint: 'Interner Name'
   = f.input :image, as: :file, hint: ['Hintergrundbild zur Orientierung', @template.image_hint].compact_blank.join('; ')
   = f.input :font, as: :file, hint: ['Schriftart für variable Texte', @template.font_hint].compact_blank.join('; ')
   = f.input :font2, as: :file, hint: ['Zweite Schriftart für variable Texte', @template.font2_hint].compact_blank.join('; ')
-- card.footer do
+- c.footer do
   = f.primary_button :submit
   - if @template.id.present?
     = f.cancel_button(competition_certificates_template_path(id: @template.id))
