--- a/app/views/competitions/certificates/templates/show.html.haml
+++ b/app/views/competitions/certificates/templates/show.html.haml
@@ -7,43 +7,42 @@
 
 .row
   .col-md-8
-    = card("Urkundenvorlage: #{@template.name}") do |card|
-      - card.direct do
-        %table.table
-          - if @template.name.present?
-            %tr
-              %th= Certificates::Template.human_attribute_name :name
-              %td= @template.name
-              %td
+    = card_direct("Urkundenvorlage: #{@template.name}") do
+      %table.table
+        - if @template.name.present?
           %tr
-            %th= Certificates::Template.human_attribute_name :image
-            - if @template.image.attached?
-              %td= image_tag(@template.image, width: '100px')
-              %td.text-end= btn_link_to(t('a.delete'), action: :remove_file, type: :image)
-            - else
-              %td Nicht angegeben
-              %td
-          %tr
-            %th= Certificates::Template.human_attribute_name :font
-            - if @template.font.attached?
-              %td{ style: "font-family: certificates_template_#{@template.id}_regular" } Beispieltext
-              %td.text-end= btn_link_to(t('a.delete'), action: :remove_file, type: :font)
-            - else
-              %td Nicht angegeben
-              %td
-          %tr
-            %th= Certificates::Template.human_attribute_name :font2
-            - if @template.font2.attached?
-              %td{ style: "font-family: certificates_template_#{@template.id}_bold" } Beispieltext
-              %td.text-end= btn_link_to(t('a.delete'), action: :remove_file, type: :font2)
-            - else
-              %td Nicht angegeben
-              %td
+            %th= Certificates::Template.human_attribute_name :name
+            %td= @template.name
+            %td
+        %tr
+          %th= Certificates::Template.human_attribute_name :image
+          - if @template.image.attached?
+            %td= image_tag(@template.image, width: '100px')
+            %td.text-end= btn_link_to(t('a.delete'), action: :remove_file, type: :image)
+          - else
+            %td Nicht angegeben
+            %td
+        %tr
+          %th= Certificates::Template.human_attribute_name :font
+          - if @template.font.attached?
+            %td{ style: "font-family: certificates_template_#{@template.id}_regular" } Beispieltext
+            %td.text-end= btn_link_to(t('a.delete'), action: :remove_file, type: :font)
+          - else
+            %td Nicht angegeben
+            %td
+        %tr
+          %th= Certificates::Template.human_attribute_name :font2
+          - if @template.font2.attached?
+            %td{ style: "font-family: certificates_template_#{@template.id}_bold" } Beispieltext
+            %td.text-end= btn_link_to(t('a.delete'), action: :remove_file, type: :font2)
+          - else
+            %td Nicht angegeben
+            %td
   .col-md-4
-    = card(t('a.actions')) do |card|
-      - card.primary_actions do |actions|
+    = card(t('a.actions')) do |c|
+      - c.primary_actions do |actions|
         - actions.link_to 'Übersicht', { action: :index }, end_icon: :list
-      - card.body do
+      - c.body do
         .d-grid.gap-2
           = btn_link_to 'Textpositionen', action: :edit_text_fields
           = btn_link_to 'Bearbeiten', action: :edit
@@ -52,6 +51,5 @@
           = btn_link_to 'Löschen', { action: :destroy }, data: { turbo_confirm: 'Vorlage wirklich löschen?', 'turbo-method': :delete }
 .row
   .col-md-6.mt-3
-    = card('Vorschau') do |card|
-      - card.body do
-        %iframe#certificates-template-preview{ src: url_for(format: :pdf) }
+    = card_body('Vorschau') do
+      %iframe#certificates-template-preview{ src: url_for(format: :pdf) }
