--- a/app/views/competitions/score/competition_results/index.html.haml
+++ b/app/views/competitions/score/competition_results/index.html.haml
@@ -10,13 +10,13 @@
           - else
             %i.far.fa-eye{ title: 'Öffentlich' }
           = result.name
-        = card(name, class: 'mb-3') do |card|
-          - card.direct do
+        = card(name, class: 'mb-3') do |c|
+          - c.direct do
             = render('index_table', resource_class:, competition_result: result)
-          - card.primary_actions do |actions|
+          - c.primary_actions do |actions|
             - actions.link_to t('a.edit'), { action: :edit, id: result.id }, end_icon: :edit
 
-          - card.actions do |actions|
+          - c.actions do |actions|
             - actions.link_to 'PDF', { action: :show, id: result.id, format: :pdf }, end_icon: :file_pdf, target: '_blank', rel: 'noopener'
             - actions.link_to 'XLS', { action: :show, id: result.id, format: :xlsx }, end_icon: :file_excel
             - actions.link_to 'Urkunden', new_competition_certificates_list_path(competition_result_id: result.id), end_icon: :file_certificate
@@ -24,13 +24,13 @@
         = card_body(result.name) do
           Diese Gesamtwertung ist nicht öffentlich.
   .col-md-4
-    = card(t('a.actions'), class: 'mb-3') do |card|
-      - card.primary_actions do |actions|
+    = card(t('a.actions'), class: 'mb-3') do |c|
+      - c.primary_actions do |actions|
         - actions.link_to t('a.add'), { action: :new }, end_icon: :square_plus
 
-      - card.body do
+      - c.body do
         %p Mit Gesamtwertungen kann man mehrere Ergebnislisten kombinieren.
 
-      - card.actions do |actions|
+      - c.actions do |actions|
         - actions.link_to 'Alle als PDF', { action: :index, format: :pdf }, end_icon: :file_pdf, target: '_blank', rel: 'noopener'
         - actions.link_to 'Alle als XLS', { action: :index, format: :xlsx }, end_icon: :file_excel
