--- a/app/views/competitions/score/list_print_generators/index.html.haml
+++ b/app/views/competitions/score/list_print_generators/index.html.haml
@@ -21,5 +21,5 @@
           .alert.alert-info= t('a.no_entries_found')
 
       - if can?(:create, UserAccessRequest.new(competition: @competition))
-        = c.primary_actions do |actions|
-          = actions.link_to t('a.add'), new_competition_score_list_print_generator_path, end_icon: :square_plus
+        - c.primary_actions do |actions|
+          - actions.link_to t('a.add'), new_competition_score_list_print_generator_path, end_icon: :square_plus
