--- a/app/views/competitions/score/lists/move.html.haml
+++ b/app/views/competitions/score/lists/move.html.haml
@@ -2,22 +2,20 @@
 
 .row.g-4
   .col-md-8
-    = card(@list.name) do |card|
-      - card.direct do
-        %table.table.sorted-table{ data: { track_count: @list.track_count } }
-          = render 'list_headline', list: @list, times: false, edit: false
-          %tbody
-            - score_list_entries(@list, move_modus: true) do |entry, run, track, _best_of_run|
-              = render 'list_entry', entry:, run:, track:, list: @list, best_of_run: false, move: true
+    = card_direct(@list.name) do
+      %table.table.sorted-table{ data: { track_count: @list.track_count } }
+        = render 'list_headline', list: @list, times: false, edit: false
+        %tbody
+          - score_list_entries(@list, move_modus: true) do |entry, run, track, _best_of_run|
+            = render 'list_entry', entry:, run:, track:, list: @list, best_of_run: false, move: true
 
   .col-md-4
-    = card('Hinweise') do |card|
-      - card.body do
-        %p Einfach die Zeilen in die neue Position ziehen.
-        .alert.alert-warning.d-none#pending-changes
-          %p Die Veränderungen wurden noch nicht gespeichert.
-          .d-grid.gap-2
-            .btn.btn-primary#save-link Jetzt speichern
-            = block_link_to 'Abbrechen', { action: :show }
-        .d-grid.gap-2#back-link
-          = block_link_to 'Zurück', { action: :show }
+    = card_body('Hinweise') do
+      %p Einfach die Zeilen in die neue Position ziehen.
+      .alert.alert-warning.d-none#pending-changes
+        %p Die Veränderungen wurden noch nicht gespeichert.
+        .d-grid.gap-2
+          .btn.btn-primary#save-link Jetzt speichern
+          = block_link_to 'Abbrechen', { action: :show }
+      .d-grid.gap-2#back-link
+        = block_link_to 'Zurück', { action: :show }
