--- a/app/views/competitions/score/results/_form.html.haml
+++ b/app/views/competitions/score/results/_form.html.haml
@@ -1,4 +1,4 @@
-- card.body do
+- c.body do
   - if params[:form] == 'series_assessments'
     = hidden_field_tag :form, 'series_assessments'
     = f.association :series_assessments, as: :check_boxes, collection: @result.possible_series_assessments, label_method: ->(assessment) { assessment.score_result_label }
@@ -36,6 +36,6 @@
       %legend Berechnung der Ergebnisse
       = f.input :calculation_method, as: :radio_buttons, collection: Score::Result::CALCULATION_METHODS.map { |k, _v| [t("score_calculation_methods.#{k}"), k] }
       %small.text-muted Bei einigen Wettkämpfen gewinnt nicht der Schnellste, sondern der Kontinuierlichste.
-- card.footer do
+- c.footer do
   = f.primary_button :submit
   = f.cancel_button(competition_score_results_path)
