--- a/app/views/competitions/score/results/index.html.haml
+++ b/app/views/competitions/score/results/index.html.haml
@@ -2,14 +2,14 @@
 
 .row.g-4
   .col-md-8
-    = card(resource_class.model_name.human(count: :many)) do |card|
+    = card(resource_class.model_name.human(count: :many)) do |c|
       - if resource_collection.exists?
-        - card.direct do
+        - c.direct do
           = render('index_table', resource_class:, resource_collection:)
       - else
-        - card.body do
+        - c.body do
           .alert.alert-info= t('a.no_entries_found')
 
       - if can?(:create, resource_class.new(competition: @competition))
-        = card.primary_actions do |actions|
-          = actions.link_to t('a.add'), { action: :new }, end_icon: :square_plus
+        - c.primary_actions do |actions|
+          - actions.link_to t('a.add'), { action: :new }, end_icon: :square_plus
