--- a/app/views/competitions/series/rounds/show.html.haml
+++ b/app/views/competitions/series/rounds/show.html.haml
@@ -4,46 +4,43 @@
   .col-md-6= render('round_card', round: @round)
   - if @person_assessments.present?
     .col-md-6
-      = card('Einzelwertungen') do |card|
-        - card.direct do
-          %table.table
-            %thead
+      = card_direct('Einzelwertungen') do
+        %table.table
+          %thead
+            %tr
+              %th Disziplin
+              %th Wettkämpfer
+              %th
+          %tbody
+            - @person_assessments.each do |row|
               %tr
-                %th Disziplin
-                %th Wettkämpfer
-                %th
-            %tbody
-              - @person_assessments.each do |row|
-                %tr
-                  %td
-                    = discipline_image(row.discipline)
-                    = row.name
-                  %td= row.participations.pluck(:person_id).uniq.count
-                  %td= link_to('Ansehen', competition_series_assessment_path(id: row.id), class: 'btn btn-sm btn-light')
-
+                %td
+                  = discipline_image(row.discipline)
+                  = row.name
+                %td= row.participations.pluck(:person_id).uniq.count
+                %td= link_to('Ansehen', competition_series_assessment_path(id: row.id), class: 'btn btn-sm btn-light')
 
 - if @team_assessments_exists
   - %i[female male].each do |gender|
     - next if @round.team_assessment_rows(@competition, gender).blank?
 
-    = card("Mannschaftswertung #{t("gender.#{gender}")}", class: 'mb-4') do |card|
-      - card.direct do
-        %table.table.table-hover.table-bordered.table-sm
-          %thead
-            %th Platz
-            %th Team
-            - @round.cups.each do |cup|
-              %th= cup.competition_place
-            %th Teil.
-            %th Bestzeit
-            %th Punkte
-          %tbody
-            - @round.team_assessment_rows(@competition, gender).each do |row|
-              %tr
-                %td= row.rank
-                %td= row.name_with_number
-                - @round.cups.each do |cup|
-                  %td= render('competitions/series/rounds/participations_table', participations: row.participations_for_cup(cup))
-                %td= row.count
-                %td= row.best_result_entry
-                %td= row.points
+    = card_direct("Mannschaftswertung #{t("gender.#{gender}")}", class: 'mb-4') do
+      %table.table.table-hover.table-bordered.table-sm
+        %thead
+          %th Platz
+          %th Team
+          - @round.cups.each do |cup|
+            %th= cup.competition_place
+          %th Teil.
+          %th Bestzeit
+          %th Punkte
+        %tbody
+          - @round.team_assessment_rows(@competition, gender).each do |row|
+            %tr
+              %td= row.rank
+              %td= row.name_with_number
+              - @round.cups.each do |cup|
+                %td= render('competitions/series/rounds/participations_table', participations: row.participations_for_cup(cup))
+              %td= row.count
+              %td= row.best_result_entry
+              %td= row.points
