--- a/app/views/competitions/teams/_new_right.html.haml
+++ b/app/views/competitions/teams/_new_right.html.haml
@@ -1,6 +1,6 @@
-= card(t('a.actions')) do |card|
-  - card.primary_actions do |actions|
+= card(t('a.actions')) do |c|
+  - c.primary_actions do |actions|
     - actions.link_to 'Übersicht', { action: :index }, end_icon: :list
-  - card.body do
+  - c.body do
     .d-grid.gap-2
       = btn_link_to 'Mannschaften importieren', new_competition_team_import_path
